MGMT-20060: Add OpenShift AI AMD operator bundle
This patch adds a new _Openshift AI (AMD)_ operator bundle that contains
the OpenShift AI operator and the AMD GPU operator.

The patch also adds the KMM operator, which is a dependency of the AMD
GPU operator.

The KMM operator builds the modules inside the cluster, using the image
stream mechanism, so it includes a setup job to enable the internal
image registry.

Related: https://issues.redhat.com/browse/MGMT-20060
Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/internal/operators/nodefeaturediscovery/templates/custom/nodefeaturediscovery.yaml
+++ b/internal/operators/nodefeaturediscovery/templates/custom/nodefeaturediscovery.yaml
@@ -24,3 +24,26 @@ spec:
           - "12"
           deviceLabelFields:
           - "vendor"
+          - "device"
+        custom:
+        - name: amd-gpu
+          labels:
+            feature.node.kubernetes.io/amd-gpu: "true"
+          matchAny:
+          - matchFeatures:
+            - feature: pci.device
+              matchExpressions:
+                vendor:
+                  op: In
+                  value:
+                  - "1002"
+                device:
+                  op: In
+                  value:
+                  - "74a0" # MI300A
+                  - "74a1" # MI300X
+                  - "740f" # MI210
+                  - "7408" # MI250X
+                  - "740c" # MI250/MI250X
+                  - "738c" # MI100
+                  - "738e" # MI100
