--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -224,8 +224,10 @@ parameters:
   value: "false"
 - name: ENVOY_CONFIGMAP_NAME
   value: assisted-service-envoy-config
-- name: OPENSHIFT_AI_SUPPORTED_GPUS
+- name: NVIDIA_SUPPORTED_GPUS
   value: "10de"
+- name: AMD_SUPPORTED_GPUS
+  value: "1002"
 apiVersion: v1
 kind: Template
 metadata:
@@ -502,8 +504,10 @@ objects:
                 value: ${OPENSHIFT_SUPPORT_LEVEL_API_BASE_URL}
               - name: IGNORED_OPENSHIFT_VERSIONS
                 value: ${IGNORED_OPENSHIFT_VERSIONS}
-              - name: OPENSHIFT_AI_SUPPORTED_GPUS
-                value: ${OPENSHIFT_AI_SUPPORTED_GPUS}
+              - name: NVIDIA_SUPPORTED_GPUS
+                value: ${NVIDIA_SUPPORTED_GPUS}
+              - name: AMD_SUPPORTED_GPUS
+                value: ${AMD_SUPPORTED_GPUS}
             volumeMounts:
               - name: route53-creds
                 mountPath: "/etc/.aws"
