Set boot device type in agent CR inventory

--- a/config/crd/bases/agent-install.openshift.io_agents.yaml
+++ b/config/crd/bases/agent-install.openshift.io_agents.yaml
@@ -216,6 +216,8 @@ spec:
                     properties:
                       currentBootMode:
                         type: string
+                      deviceType:
+                        type: string
                       pxeInterface:
                         type: string
                     type: object
