Validate the CPU architectures set by users in the CRs
There is an inconsistency about the name of the architecture to use in the InfraEnv and other CRDs using the OSImage object.
Users can easily provide a different string for the CPUArchitecture fields in such CRs and no error would arise from them as they are not validated, making it harder for the user to debug and understand how to proceed with their deployment.

This commit adds validation for the architecture field among the values in the set {arm64, ppc64le, s390x, x86_64}

Related to openshift/assisted-service#4441

--- a/config/crd/bases/agent-install.openshift.io_agentserviceconfigs.yaml
+++ b/config/crd/bases/agent-install.openshift.io_agentserviceconfigs.yaml
@@ -751,6 +751,11 @@ spec:
                   properties:
                     cpuArchitecture:
                       description: The CPU architecture of the image (x86_64/arm64/etc).
+                      enum:
+                      - arm64
+                      - ppc64le
+                      - x86_64
+                      - s390x
                       type: string
                     openshiftVersion:
                       description: |-
