--- a/.tekton/assisted-service-rhel8-acm-ds-main-pull-request.yaml
+++ b/.tekton/assisted-service-rhel8-acm-ds-main-pull-request.yaml
@@ -8,13 +8,13 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "release-ocm-2.13"
+      == "master"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: assisted-service-rhel9-mce-downstream-2-13
-    appstudio.openshift.io/component: assisted-service-rhel9-mce-downstream-2-13
+    appstudio.openshift.io/application: assisted-installer-application-acm-ds-main
+    appstudio.openshift.io/component: assisted-service-rhel8-acm-ds-main
     pipelines.appstudio.openshift.io/type: build
-  name: assisted-service-rhel9-mce-downstream-2-13-on-pull-request
+  name: assisted-service-rhel8-acm-ds-main-on-pull-request
   namespace: assisted-installer-tenant
 spec:
   params:
@@ -23,14 +23,14 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-service-rhel9-mce-downstream-2-13/assisted-service-rhel9-mce-downstream-2-13:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-main/assisted-service-rhel8-acm-ds-main:on-pr-{{revision}}
   - name: image-expires-after
     value: 5d
   - name: build-platforms
     value:
     - linux/x86_64
   - name: dockerfile
-    value: Dockerfile.assisted-service-rhel9-mce
+    value: Dockerfile.assisted-service-rhel8-mce
   - name: path-context
     value: .
   - name: build-args
@@ -40,7 +40,7 @@ spec:
   - name: hermetic
     value: "true"
   - name: prefetch-input
-    value: '[{"type": "gomod", "path": "."}, {"type": "rpm", "path": "./rpm-prefetching/assisted-service-rhel9/"}]'
+    value: '[{"type": "gomod", "path": "."}, {"type": "rpm", "path": "./rpm-prefetching/assisted-service-rhel8/"}]'
   - name: build-source-image
     value: "true"
   pipelineSpec:
