--- a/.tekton/assisted-service-rhel9-acm-ds-main-push.yaml
+++ b/.tekton/assisted-service-rhel9-acm-ds-main-push.yaml
@@ -7,13 +7,13 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "release-ocm-2.13"
+      == "master"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: assisted-service-rhel9-mce-downstream-2-13
-    appstudio.openshift.io/component: assisted-service-rhel9-mce-downstream-2-13
+    appstudio.openshift.io/application: assisted-installer-application-acm-ds-main
+    appstudio.openshift.io/component: assisted-service-rhel9-acm-ds-main
     pipelines.appstudio.openshift.io/type: build
-  name: assisted-service-rhel9-mce-downstream-2-13-on-push
+  name: assisted-service-rhel9-acm-ds-main-on-push
   namespace: assisted-installer-tenant
 spec:
   params:
@@ -22,7 +22,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-service-rhel9-mce-downstream-2-13/assisted-service-rhel9-mce-downstream-2-13:{{revision}}
+    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-main/assisted-service-rhel9-acm-ds-main:{{revision}}
   - name: build-platforms
     value:
     - linux/x86_64
