Add discovery ignition URL to the infraenv status
This will mainly be used with integrations that provide the discovery
ignition as metadata to hosts that boot with a generic disk image rather
than the discovery ISO, but can also be used for debugging.

Resolves https://issues.redhat.com/browse/MGMT-19792

--- a/deploy/olm-catalog/manifests/agent-install.openshift.io_infraenvs.yaml
+++ b/deploy/olm-catalog/manifests/agent-install.openshift.io_infraenvs.yaml
@@ -304,6 +304,10 @@ spec:
               bootArtifacts:
                 description: BootArtifacts specifies the URLs for each boot artifact
                 properties:
+                  discoveryIgnitionURL:
+                    description: DiscoveryIgnitionURL specifies an HTTP/S URL that
+                      contains the discovery ignition
+                    type: string
                   initrd:
                     description: InitrdURL specifies an HTTP/S URL that contains the
                       initrd
