--- a/deploy/olm-catalog/manifests/assisted-service-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/manifests/assisted-service-operator.clusterserviceversion.yaml
@@ -299,7 +299,7 @@ metadata:
       ]
     capabilities: Basic Install
     categories: OpenShift Optional
-    containerImage: quay.io/edge-infrastructure/assisted-service:latest
+    containerImage: quay.io/edge-infrastructure/assisted-service:ocm-2.13
     createdAt: ""
     description: The Infrastructure Operator for Red Hat OpenShift is responsible
       for managing the deployment of the Assisted Service.
@@ -1117,19 +1117,19 @@ spec:
                 - /assisted-service-operator
                 env:
                 - name: SERVICE_IMAGE
-                  value: quay.io/edge-infrastructure/assisted-service:latest
+                  value: quay.io/edge-infrastructure/assisted-service:ocm-2.13
                 - name: SERVICE_EL8_IMAGE
-                  value: quay.io/edge-infrastructure/assisted-service-el8:latest
+                  value: quay.io/edge-infrastructure/assisted-service-el8:ocm-2.13
                 - name: IMAGE_SERVICE_IMAGE
-                  value: quay.io/edge-infrastructure/assisted-image-service:latest
+                  value: quay.io/edge-infrastructure/assisted-image-service:ocm-2.13
                 - name: DATABASE_IMAGE
                   value: quay.io/sclorg/postgresql-12-c8s:latest
                 - name: AGENT_IMAGE
-                  value: quay.io/edge-infrastructure/assisted-installer-agent:latest
+                  value: quay.io/edge-infrastructure/assisted-installer-agent:ocm-2.13
                 - name: CONTROLLER_IMAGE
-                  value: quay.io/edge-infrastructure/assisted-installer-controller:latest
+                  value: quay.io/edge-infrastructure/assisted-installer-controller:ocm-2.13
                 - name: INSTALLER_IMAGE
-                  value: quay.io/edge-infrastructure/assisted-installer:latest
+                  value: quay.io/edge-infrastructure/assisted-installer:ocm-2.13
                 - name: OS_IMAGES
                   value: '[{"openshift_version":"4.9","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.9/4.9.45/rhcos-4.9.45-x86_64-live.x86_64.iso","version":"49.84.202207192205-0"},{"openshift_version":"4.10","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.10/4.10.37/rhcos-4.10.37-x86_64-live.x86_64.iso","version":"410.84.202210040010-0"},{"openshift_version":"4.10","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.10/4.10.37/rhcos-4.10.37-aarch64-live.aarch64.iso","version":"410.84.202210040011-0"},{"openshift_version":"4.11","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.11/4.11.48/rhcos-4.11.48-x86_64-live.x86_64.iso","version":"411.86.202308081056-0"},{"openshift_version":"4.11","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.11/4.11.48/rhcos-4.11.48-aarch64-live.aarch64.iso","version":"411.86.202308081056-0"},{"openshift_version":"4.11","cpu_architecture":"s390x","url":"https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.11/4.11.48/rhcos-4.11.48-s390x-live.s390x.iso","version":"411.86.202308081056-0"},{"openshift_version":"4.11","cpu_architecture":"ppc64le","url":"https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.11/4.11.48/rhcos-4.11.48-ppc64le-live.ppc64le.iso","version":"411.86.202308081056-0"},{"openshift_version":"4.12","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.12/4.12.30/rhcos-4.12.30-x86_64-live.x86_64.iso","version":"412.86.202308081039-0"},{"openshift_version":"4.12","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.12/4.12.30/rhcos-4.12.30-aarch64-live.aarch64.iso","version":"412.86.202308081039-0"},{"openshift_version":"4.12","cpu_architecture":"s390x","url":"https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.12/4.12.30/rhcos-4.12.30-s390x-live.s390x.iso","version":"412.86.202308081039-0"},{"openshift_version":"4.12","cpu_architecture":"ppc64le","url":"https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.12/4.12.30/rhcos-4.12.30-ppc64le-live.ppc64le.iso","version":"412.86.202308081039-0"},{"openshift_version":"4.13","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.13/4.13.10/rhcos-4.13.10-x86_64-live.x86_64.iso","version":"413.92.202307260246-0"},{"openshift_version":"4.13","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.13/4.13.10/rhcos-4.13.10-aarch64-live.aarch64.iso","version":"413.92.202307260246-0"},{"openshift_version":"4.13","cpu_architecture":"ppc64le","url":"https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.10/rhcos-4.13.10-ppc64le-live.ppc64le.iso","version":"413.92.202307260246-0"},{"openshift_version":"4.13","cpu_architecture":"s390x","url":"https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.13/4.13.10/rhcos-4.13.10-s390x-live.s390x.iso","version":"413.92.202307260246-0"},{"openshift_version":"4.14","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.14/4.14.34/rhcos-4.14.34-x86_64-live.x86_64.iso","version":"414.92.202407091253-0"},{"openshift_version":"4.14","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.14/4.14.34/rhcos-4.14.34-aarch64-live.aarch64.iso","version":"414.92.202407091253-0"},{"openshift_version":"4.14","cpu_architecture":"ppc64le","url":"https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.14/4.14.34/rhcos-4.14.34-ppc64le-live.ppc64le.iso","version":"414.92.202407091253-0"},{"openshift_version":"4.14","cpu_architecture":"s390x","url":"https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.14/4.14.34/rhcos-4.14.34-s390x-live.s390x.iso","version":"414.92.202407091253-0"},{"openshift_version":"4.15","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.15/4.15.23/rhcos-4.15.23-x86_64-live.x86_64.iso","version":"415.92.202407091355-0"},{"openshift_version":"4.15","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.15/4.15.23/rhcos-4.15.23-aarch64-live.aarch64.iso","version":"415.92.202407091355-0"},{"openshift_version":"4.15","cpu_architecture":"ppc64le","url":"https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.15/4.15.23/rhcos-4.15.23-ppc64le-live.ppc64le.iso","version":"415.92.202407091355-0"},{"openshift_version":"4.15","cpu_architecture":"s390x","url":"https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.15/4.15.23/rhcos-4.15.23-s390x-live.s390x.iso","version":"415.92.202407091355-0"},{"openshift_version":"4.16","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.16/4.16.21/rhcos-4.16.21-x86_64-live.x86_64.iso","version":"416.94.202410211619-0"},{"openshift_version":"4.16","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.16/4.16.21/rhcos-4.16.21-aarch64-live.aarch64.iso","version":"416.94.202410211619-0"},{"openshift_version":"4.16","cpu_architecture":"ppc64le","url":"https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.16/4.16.21/rhcos-4.16.21-ppc64le-live.ppc64le.iso","version":"416.94.202410211619-0"},{"openshift_version":"4.16","cpu_architecture":"s390x","url":"https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.16/4.16.21/rhcos-4.16.21-s390x-live.s390x.iso","version":"416.94.202410211619-0"},{"openshift_version":"4.17","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.17/4.17.2/rhcos-4.17.2-x86_64-live.x86_64.iso","version":"417.94.202410090854-0"},{"openshift_version":"4.17","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.17/4.17.2/rhcos-4.17.2-aarch64-live.aarch64.iso","version":"417.94.202410090854-0"},{"openshift_version":"4.17","cpu_architecture":"ppc64le","url":"https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.17/4.17.2/rhcos-4.17.2-ppc64le-live.ppc64le.iso","version":"417.94.202410090854-0"},{"openshift_version":"4.17","cpu_architecture":"s390x","url":"https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.17/4.17.2/rhcos-4.17.2-s390x-live.s390x.iso","version":"417.94.202410090854-0"},{"openshift_version":"4.18","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-x86_64-live.x86_64.iso","version":"418.94.202411221729-0"},{"openshift_version":"4.18","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-aarch64-live.aarch64.iso","version":"418.94.202411221729-0"},{"openshift_version":"4.18","cpu_architecture":"ppc64le","url":"https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-ppc64le-live.ppc64le.iso","version":"418.94.202411221729-0"},{"openshift_version":"4.18","cpu_architecture":"s390x","url":"https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-s390x-live.s390x.iso","version":"418.94.202411221729-0"},{"openshift_version":"4.19","cpu_architecture":"x86_64","url":"https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/pre-release/dev-4.19/rhcos-dev-4.19-x86_64-live.x86_64.iso","version":"418.94.202410090804-0"},{"openshift_version":"4.19","cpu_architecture":"arm64","url":"https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-aarch64-live.aarch64.iso","version":"418.94.202411221729-0"},{"openshift_version":"4.19","cpu_architecture":"ppc64le","url":"https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-ppc64le-live.ppc64le.iso","version":"418.94.202411221729-0"},{"openshift_version":"4.19","cpu_architecture":"s390x","url":"https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-s390x-live.s390x.iso","version":"418.94.202411221729-0"}]'
                 - name: SERVICE_ACCOUNT_NAME
@@ -1144,7 +1144,7 @@ spec:
                   valueFrom:
                     fieldRef:
                       fieldPath: metadata.name
-                image: quay.io/edge-infrastructure/assisted-service:latest
+                image: quay.io/edge-infrastructure/assisted-service:ocm-2.13
                 livenessProbe:
                   httpGet:
                     path: /healthz
@@ -1257,16 +1257,16 @@ spec:
   provider:
     name: Red Hat
   relatedImages:
-  - image: quay.io/edge-infrastructure/assisted-service:latest
+  - image: quay.io/edge-infrastructure/assisted-service:ocm-2.13
     name: controller
-  - image: quay.io/edge-infrastructure/assisted-image-service:latest
+  - image: quay.io/edge-infrastructure/assisted-image-service:ocm-2.13
     name: image-service
   - image: quay.io/sclorg/postgresql-12-c8s:latest
     name: postgresql
-  - image: quay.io/edge-infrastructure/assisted-installer:latest
+  - image: quay.io/edge-infrastructure/assisted-installer:ocm-2.13
     name: installer
-  - image: quay.io/edge-infrastructure/assisted-installer-agent:latest
+  - image: quay.io/edge-infrastructure/assisted-installer-agent:ocm-2.13
     name: agent
-  - image: quay.io/edge-infrastructure/assisted-installer-controller:latest
+  - image: quay.io/edge-infrastructure/assisted-installer-controller:ocm-2.13
     name: reporter
   version: 99.0.0-unreleased
