--- a/.tekton/assisted-service-rhel9-acm-ds-2-14-push.yaml
+++ b/.tekton/assisted-service-rhel9-acm-ds-2-14-push.yaml
@@ -7,13 +7,13 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "release-ocm-2.13"
+      == "release-ocm-2.14"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: assisted-installer-application-acm-ds-2-13
-    appstudio.openshift.io/component: assisted-service-rhel8-acm-ds-2-13
+    appstudio.openshift.io/application: assisted-installer-application-acm-ds-2.14
+    appstudio.openshift.io/component: assisted-service-rhel9-acm-ds-2.14
     pipelines.appstudio.openshift.io/type: build
-  name: assisted-service-rhel8-acm-ds-2-13-on-push
+  name: assisted-service-rhel9-acm-ds-2.14-on-push
   namespace: assisted-installer-tenant
 spec:
   params:
@@ -22,12 +22,12 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-2-13/assisted-service-rhel8-acm-ds-2-13:{{revision}}
+    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-2.14/assisted-service-rhel9-acm-ds-2.14:{{revision}}
   - name: build-platforms
     value:
     - linux/x86_64
   - name: dockerfile
-    value: Dockerfile.assisted-service-rhel8-mce
+    value: Dockerfile.assisted-service-rhel9-mce
   - name: path-context
     value: .
   - name: build-args
@@ -37,7 +37,7 @@ spec:
   - name: hermetic
     value: "true"
   - name: prefetch-input
-    value: '[{"type": "gomod", "path": "."}, {"type": "rpm", "path": "./rpm-prefetching/assisted-service-rhel8/"}]'
+    value: '[{"type": "gomod", "path": "."}, {"type": "rpm", "path": "./rpm-prefetching/assisted-service-rhel9/"}]'
   - name: build-source-image
     value: "true"
   pipelineSpec:
