MGMT-19860: Add OpenShift AI dependencies for UI 2.37
Version 2.37 of the UI doesn't support the concept of operator bundles
yet, and we need to coexist with it for a while, as it may take up to
one week till it is deployed to production. During that time the
OpenShift AI operator won't work correctly because it won't
automatically add the dependencies that it needs. On the other hand
wwhen the new UI is deployed we will need to disable that. To make that
possible this patch adds a new `OPENSHIFT_AI_SUPPORT_UI_2_37`
environment variable that will be set to `true` go support the old
version of the UI, or to `false` to support the new version. By defalt
it is set to `true`, so initially nothing needs to be changed. But when
the new version of the UI is deployed the configuration will need to be
changed.

Related: https://issues.redhat.com/browse/MGMT-19860
Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -226,6 +226,8 @@ parameters:
   value: assisted-service-envoy-config
 - name: OPENSHIFT_AI_SUPPORTED_GPUS
   value: "10de"
+- name: OPENSHIFT_AI_SUPPORT_UI_2_37
+  value: "true"
 apiVersion: v1
 kind: Template
 metadata:
@@ -504,6 +506,8 @@ objects:
                 value: ${IGNORED_OPENSHIFT_VERSIONS}
               - name: OPENSHIFT_AI_SUPPORTED_GPUS
                 value: ${OPENSHIFT_AI_SUPPORTED_GPUS}
+              - name: OPENSHIFT_AI_SUPPORT_UI_2_37
+                value: ${OPENSHIFT_AI_SUPPORT_UI_2_37}
             volumeMounts:
               - name: route53-creds
                 mountPath: "/etc/.aws"
