MGMT-20005: Prepare OCP 4.18 / 4.19 images for OCP 4.18 GA

--- a/data/default_release_sources.json
+++ b/data/default_release_sources.json
@@ -267,31 +267,31 @@
       {
         "cpu_architecture": "x86_64",
         "channels": [
-          "candidate"
+          "stable"
         ]
       },
       {
         "cpu_architecture": "arm64",
         "channels": [
-          "candidate"
+          "stable"
         ]
       },
       {
         "cpu_architecture": "ppc64le",
         "channels": [
-          "candidate"
+          "stable"
         ]
       },
       {
         "cpu_architecture": "s390x",
         "channels": [
-          "candidate"
+          "stable"
         ]
       },
       {
         "cpu_architecture": "multi",
         "channels": [
-          "candidate"
+          "stable"
         ]
       }
     ]
