--- a/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
+++ b/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
@@ -178,13 +178,13 @@ spec:
     version: 418.94.202410090804-0
   - cpuArchitecture: arm64
     openshiftVersion: '4.19'
-    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-aarch64-live.aarch64.iso
+    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.18/4.18.1/rhcos-4.18.1-aarch64-live.aarch64.iso
     version: 418.94.202411221729-0
   - cpuArchitecture: ppc64le
     openshiftVersion: '4.19'
-    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-ppc64le-live.ppc64le.iso
+    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.18/4.18.1/rhcos-4.18.1-ppc64le-live.ppc64le.iso
     version: 418.94.202411221729-0
   - cpuArchitecture: s390x
     openshiftVersion: '4.19'
-    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-s390x-live.s390x.iso
+    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.18/4.18.1/rhcos-4.18.1-s390x-live.s390x.iso
     version: 418.94.202411221729-0
