--- a/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
+++ b/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
@@ -174,17 +174,17 @@ spec:
     version: 418.94.202501221327-0
   - cpuArchitecture: x86_64
     openshiftVersion: '4.19'
-    url: https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/pre-release/dev-4.19/rhcos-dev-4.19-x86_64-live-iso.x86_64.iso
-    version: 418.94.202410090804-0
+    url: https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/pre-release/4.19.0-ec.3/rhcos-4.19.0-ec.3-x86_64-live-iso.x86_64.iso
+    version: 9.6.20250121-0
   - cpuArchitecture: arm64
     openshiftVersion: '4.19'
-    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.18/4.18.1/rhcos-4.18.1-aarch64-live.aarch64.iso
-    version: 418.94.202411221729-0
+    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/pre-release/4.19.0-ec.3/rhcos-4.19.0-ec.3-aarch64-live-iso.aarch64.iso
+    version: 9.6.20250121-0
   - cpuArchitecture: ppc64le
     openshiftVersion: '4.19'
-    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.18/4.18.1/rhcos-4.18.1-ppc64le-live.ppc64le.iso
-    version: 418.94.202411221729-0
+    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/pre-release/4.19.0-ec.3/rhcos-4.19.0-ec.3-ppc64le-live-iso.ppc64le.iso
+    version: 9.6.20250121-0
   - cpuArchitecture: s390x
     openshiftVersion: '4.19'
-    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.18/4.18.1/rhcos-4.18.1-s390x-live.s390x.iso
-    version: 418.94.202411221729-0
+    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.19.0-ec.3/rhcos-4.19.0-ec.3-s390x-live-iso.s390x.iso
+    version: 9.6.20250121-0
