--- a/Dockerfile.assisted-service-build
+++ b/Dockerfile.assisted-service-build
@@ -1,4 +1,6 @@
-FROM registry.access.redhat.com/ubi9/go-toolset:1.21 AS golang
+FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_9_golang_1.21 AS golang
+
+ENV GOFLAGS ""
 
 RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.0
 RUN go install gotest.tools/gotestsum@latest
@@ -6,7 +8,7 @@ RUN go install gotest.tools/gotestsum@latest
 FROM quay.io/centos/centos:stream9
 
 ENV GOROOT=/usr/lib/golang
-ENV GOPATH=/opt/app-root/src/go
+ENV GOPATH=/go
 ENV VIRTUAL_ENV=/opt/venv
 # A directory in the path with write permission even for non-root users
 ENV TOOLS=/tools/
