--- a/Dockerfile.assisted-service-debug
+++ b/Dockerfile.assisted-service-debug
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/ubi9/go-toolset:1.21 AS golang
+FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_9_golang_1.21 AS golang
 
 RUN GOFLAGS=-mod=mod go install github.com/go-delve/delve/cmd/dlv@v1.21.2
 
@@ -7,7 +7,7 @@ FROM quay.io/centos/centos:stream9 AS builder
 RUN dnf install --enablerepo=crb -y gcc git nmstate-devel openssl-devel make && dnf clean all
 
 ENV GOROOT=/usr/lib/golang
-ENV GOPATH=/opt/app-root/src/go
+ENV GOPATH=/go
 ENV PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 # For build-minimal target
 ENV DEBUG_SERVICE=true
@@ -28,7 +28,7 @@ RUN dnf install --enablerepo=crb -y nmstate-devel
 ARG DEBUG_SERVICE_PORT=40000
 EXPOSE 8090 $DEBUG_SERVICE_PORT
 
-COPY --from=builder /opt/app-root/src/go/bin/dlv /usr/bin/dlv
+COPY --from=builder /go/bin/dlv /usr/bin/dlv
 COPY --from=builder /assisted-service/build/assisted-installer/assisted-service /assisted-service
 COPY --from=builder /assisted-service/build/assisted-installer/assisted-service-operator /assisted-service-operator
 
