MGMT-20322: Add AI operators environment requirements for testing

--- a/deploy/assisted-service-configmap.yaml
+++ b/deploy/assisted-service-configmap.yaml
@@ -29,3 +29,5 @@ data:
   RELEASE_SOURCES: REPLACE_RELEASE_SOURCES
   OPENSHIFT_RELEASE_SYNCER_INTERVAL: REPLACE_OPENSHIFT_RELEASE_SYNCER_INTERVAL
   IGNORED_OPENSHIFT_VERSIONS: REPLACE_IGNORED_OPENSHIFT_VERSIONS
+  NVIDIA_REQUIRE_GPU: REPLACE_NVIDIA_REQUIRE_GPU
+  AMD_REQUIRE_GPU: REPLACE_AMD_REQUIRE_GPU
