NO-ISSUE: Apply konflux migration

--- a/.tekton/assisted-service-saas-main-pull-request.yaml
+++ b/.tekton/assisted-service-saas-main-pull-request.yaml
@@ -346,6 +346,10 @@ spec:
         - "false"
     - name: sast-snyk-check
       params:
+      - name: image-digest
+        value: $(tasks.build-container.results.IMAGE_DIGEST)
+      - name: image-url
+        value: $(tasks.build-container.results.IMAGE_URL)
       - name: ARGS
         value: "--project-name=assisted-service --report --org=3e6fd93b-b325-49dd-8a33-432a0160ab66"
       - name: IGNORE_FILE_PATHS
@@ -395,6 +399,8 @@ spec:
       params:
       - name: image-url
         value: $(tasks.build-container.results.IMAGE_URL)
+      - name: image-digest
+        value: $(tasks.build-container.results.IMAGE_DIGEST)
       - name: IMAGE
         value: $(params.output-image)
       - name: DOCKERFILE
@@ -483,6 +489,8 @@ spec:
       params:
       - name: image-url
         value: $(tasks.build-container.results.IMAGE_URL)
+      - name: image-digest
+        value: $(tasks.build-container.results.IMAGE_DIGEST)
       runAfter:
       - build-container
       taskRef:
