--- a/.tekton/assisted-service-rhel8-acm-ds-2-15-push.yaml
+++ b/.tekton/assisted-service-rhel8-acm-ds-2-15-push.yaml
@@ -4,17 +4,16 @@ metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/openshift/assisted-service?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
-    build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "release-ocm-2.14"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
+      == "release-ocm-2.15"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: assisted-installer-application-acm-ds-2-14
-    appstudio.openshift.io/component: assisted-service-rhel9-acm-ds-2-14
+    appstudio.openshift.io/application: assisted-installer-application-acm-ds-2-15
+    appstudio.openshift.io/component: assisted-service-rhel8-acm-ds-2-15
     pipelines.appstudio.openshift.io/type: build
-  name: assisted-service-rhel9-acm-ds-2-14-on-pull-request
+  name: assisted-service-rhel8-acm-ds-2-15-on-push
   namespace: assisted-installer-tenant
 spec:
   params:
@@ -23,14 +22,12 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-2-14/assisted-service-rhel9-acm-ds-2-14:on-pr-{{revision}}
-  - name: image-expires-after
-    value: 5d
+    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-2-15/assisted-service-rhel8-acm-ds-2-15:{{revision}}
   - name: build-platforms
     value:
     - linux/x86_64
   - name: dockerfile
-    value: Dockerfile.assisted-service-rhel9-mce
+    value: Dockerfile.assisted-service-rhel8-mce
   - name: path-context
     value: .
   - name: build-args
@@ -40,7 +37,7 @@ spec:
   - name: hermetic
     value: "true"
   - name: prefetch-input
-    value: '[{"type": "gomod", "path": "."}, {"type": "rpm", "path": "./rpm-prefetching/assisted-service-rhel9/"}]'
+    value: '[{"type": "gomod", "path": "."}, {"type": "rpm", "path": "./rpm-prefetching/assisted-service-rhel8/"}]'
   - name: build-source-image
     value: "true"
   pipelineSpec:
