NO-ISSUE: Add konflux service account migration

--- a/.tekton/assisted-service-rhel9-acm-ds-2-15-push.yaml
+++ b/.tekton/assisted-service-rhel9-acm-ds-2-15-push.yaml
@@ -615,7 +615,8 @@ spec:
       optional: true
     - name: netrc
       optional: true
-  taskRunTemplate: {}
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-assisted-service-rhel9-acm-ds-2-15
   workspaces:
   - name: git-auth
     secret:
