MGMT-20675: Fix renovate config for golang update

--- a/renovate.json
+++ b/renovate.json
@@ -34,7 +34,7 @@
             "customType": "regex",
             "fileMatch": ["^Dockerfile.assisted-service$"],
             "matchStrings": [
-                "FROM registry.access.redhat.com/ubi\\${RHEL_VERSION}/go-toolset:(?<currentValue>.*?) AS golang\\n"
+                "FROM registry.access.redhat.com/ubi\\$RHEL_VERSION/go-toolset:(?<currentValue>.*?) AS golang\\n"
             ],
             "depNameTemplate": "registry.access.redhat.com/ubi9/go-toolset",
             "datasourceTemplate": "docker"
